data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_388.wast
;; 9. **Invalid Label Context Leading to Unreachable**:    Place an `unreachable` instruction after a label reference in a loop. Test if incorrect setup of labels can cause branches to mistakenly target the wrong address, executing `unreachable`.

(assert_invalid
  (module (func $invalid-label-context
    (loop (result i32)
      (br 1)
      (unreachable)
    )
  ))
  "type mismatch"
)